Fixed notecard form being too big

--- a/src/components/add-notecard/index.css
+++ b/src/components/add-notecard/index.css
@@ -34,3 +34,9 @@
   border-radius: 4px;
   font-weight: bold;
 }
+
+@media screen and (min-width: 768px) {
+  .add-form {
+    width: 40vw;
+  }
+}
